--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -190,6 +190,10 @@
     <Content Include="Formula1\index.html" />
     <Content Include="Formula1\myCSS.css" />
     <Content Include="Formula1\myScript.js" />
+    <Content Include="Projeto\circuits.html" />
+    <Content Include="Projeto\circuits.js" />
+    <Content Include="Projeto\constructors.html" />
+    <Content Include="Projeto\countries.html" />
     <Content Include="Projeto\drivers.css" />
     <Content Include="Projeto\drivers.html" />
     <Content Include="Projeto\drivers.js" />
