--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -199,6 +199,7 @@
     <Content Include="Projeto\drivers.html" />
     <Content Include="Projeto\drivers.js" />
     <Content Include="Projeto\history.html" />
+    <Content Include="Projeto\index.js" />
     <Content Include="Projeto\legends.html" />
     <Content Include="Projeto\myCSS.css" />
     <Content Include="Projeto\index.html" />
