--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -209,6 +209,8 @@
     <Content Include="Projeto\myCSS.css" />
     <Content Include="Projeto\index.html" />
     <Content Include="Projeto\nav.html" />
+    <Content Include="Projeto\raceDetails.html" />
+    <Content Include="Projeto\raceDetails.js" />
     <Content Include="Projeto\rules.html" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
