--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -216,6 +216,7 @@
     <Content Include="Projeto\races.js" />
     <Content Include="Projeto\rules.html" />
     <Content Include="Projeto\seasons.html" />
+    <Content Include="Projeto\seasons.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
