--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -217,6 +217,7 @@
     <Content Include="Projeto\rules.html" />
     <Content Include="Projeto\seasons.html" />
     <Content Include="Projeto\seasons.js" />
+    <Content Include="Projeto\tickets.html" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
