--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -218,6 +218,7 @@
     <Content Include="Projeto\seasons.html" />
     <Content Include="Projeto\seasons.js" />
     <Content Include="Projeto\tickets.html" />
+    <Content Include="Projeto\tickets.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
