--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -219,6 +219,8 @@
     <Content Include="Projeto\seasons.js" />
     <Content Include="Projeto\tickets.html" />
     <Content Include="Projeto\tickets.js" />
+    <Content Include="Projeto\tickets1.html" />
+    <Content Include="Projeto\tickets2.html" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
