--- a/ITWproject.vbproj
+++ b/ITWproject.vbproj
@@ -192,6 +192,7 @@
     <Content Include="Formula1\myCSS.css" />
     <Content Include="Formula1\myScript.js" />
     <Content Include="Projeto\circuitDetails.html" />
+    <Content Include="Projeto\circuitDetails.js" />
     <Content Include="Projeto\circuits.html" />
     <Content Include="Projeto\circuits.js" />
     <Content Include="Projeto\constructorDetails.html" />
